--- a/java-project/Makefile
+++ b/java-project/Makefile
@@ -87,6 +87,10 @@ where.is:
 	@ $(ECHO) -e "$(OK_COLOR)===> Start looking in JAR files for $(class)...$(NO_COLOR)"
 	$(call find_class_in_jar, $(class))
 
+reformat:
+	eclipse -nosplash -application org.eclipse.jdt.core.JavaCodeFormatter -verbose -config $(shell pwd)/codequality/org.eclipse.jdt.core.prefs $(shell pwd)/src
+	find $(shell pwd)/src -name \*.java | xargs perl -pi -e 's/{ /{/g; s/(\S) }/$$1}/g; s/\* $$/\*/; s/([.]<[^>]+>)\s+/$$1/g'
+
 doc:
 	@ $(MAVEN) javadoc:javadoc
 
