--- a/java-project/pom.xml
+++ b/java-project/pom.xml
@@ -263,6 +263,26 @@ http://www.w3.org/2001/XMLSchema-instance ">
             <version>2.5.0</version>
         </dependency>
 
+        <!-- Prolog -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>18.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>4.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.googlecode.prolog-cafe</groupId>
+            <artifactId>PrologCafe</artifactId>
+            <version>1.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/resources/PrologCafe-1.3.jar</systemPath>
+        </dependency>
+
+
     </dependencies>
 
 </project>
