--- a/books-code/etudes/pom.xml
+++ b/books-code/etudes/pom.xml
@@ -9,6 +9,10 @@
     <groupId>books</groupId>
     <artifactId>etudes-for-programmers</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+
+    <name>Etudes for programmers (book)</name>
+    <description>Implementation of Charles Wetherell book etudes</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -33,18 +37,16 @@
             <version>${spock.version}</version>
             <scope>test</scope>
         </dependency>
-
-        <!-- Using for demos -->
-        <dependency>
-            <groupId>jline</groupId>
-            <artifactId>jline</artifactId>
-            <version>2.14.4</version>
-        </dependency>
-
     </dependencies>
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.0.0</version>
+            </plugin>
+
             <!-- Allows to mix Groovy and Java -->
             <plugin>
                 <groupId>org.codehaus.gmavenplus</groupId>
@@ -76,6 +78,10 @@
                 </configuration>
             </plugin>
         </plugins>
-
     </build>
+
+    <modules>
+        <module>GameOfLife</module>
+
+    </modules>
 </project>
