Try to fix bullets

--- a/books-code/etudes/pom.xml
+++ b/books-code/etudes/pom.xml
@@ -83,6 +83,7 @@
     <modules>
         <module>GameOfLife</module>
         <module>MapColoring</module>
+        <module>PrintersDevil</module>
 
     </modules>
 </project>
