Start adding comments and unit tests

--- a/books-code/plpj/pom.xml
+++ b/books-code/plpj/pom.xml
@@ -12,14 +12,32 @@
     <packaging>pom</packaging>
 
     <name>Programming Language Processors in Java (book)</name>
-    <description>Implementation of programming laguege Triangle using Java</description>
+    <description>Implementation of programming language Triangle using Java</description>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
         <java.version>1.8</java.version>
+
+        <groovy.version>2.4.11</groovy.version>
+        <spock.version>1.1-groovy-2.4</spock.version>
     </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <version>${groovy.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.spockframework</groupId>
+            <artifactId>spock-core</artifactId>
+            <version>${spock.version}</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
@@ -27,6 +45,22 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <version>3.0.0</version>
+            </plugin>
+
+            <!-- Allows to mix Groovy and Java -->
+            <plugin>
+                <groupId>org.codehaus.gmavenplus</groupId>
+                <artifactId>gmavenplus-plugin</artifactId>
+                <version>1.5</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>addTestSources</goal>
+                            <goal>testGenerateStubs</goal>
+                            <goal>testCompile</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
             <plugin>
@@ -44,6 +78,6 @@
     <modules>
         <module>TAM</module>
         <module>Triangle</module>
-    
     </modules>
+
 </project>
