--- a/books-code/etudes/pom.xml
+++ b/books-code/etudes/pom.xml
@@ -86,5 +86,8 @@
         <module>PrintersDevil</module>
         <module>WinningIsTheOnlyThing</module>
 
+        <!-- Compilers -->
+        <module>EasyDoesIt</module>
+
     </modules>
 </project>
